# PrivSight

./: ._package-lock.json  ARCHITECTURE.md  ATTRIBUTION.md  Aptfile  BUILD_COMPLETE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  FEATURE_CHECKLIST.md  FINAL_INTEGRATION.md  FIXED_ISSUES.md  INDEX.md  INTEGRATION_V2.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  SETUP.md  TESTING_V2.md  UPGRADE_SUMMARY_V2.md  VERIFY_BUILD.md  WEBSITE_DEPLOYMENT.md  components.json  electron-builder.json  index.html  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json  tsconfig.tsbuildinfo
app/: ._page.tsx  animations.css  globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/how-it-works/: page.tsx  styles.css
components/: DashboardLayout.tsx  HowItWorksDropdown.tsx  IntelligentPrivacyFeatures.tsx  PrivacyShield.tsx  Sidebar.tsx  StatusCards.tsx  WebcamPreview.tsx
electron/: config.ts  index.html  ipcHandlers.ts  main.ts  package.json  preload.ts  tray.ts  tsconfig.json  vite.config.ts
hooks/: usePrivSightSocket.ts
python/: Aptfile  attention_detector.py  config.py  database.py  face_embeddings.py  face_registry.py  frame_buffer.py  main.py  multi_face_processor.py  nixpacks.toml  notification_classifier.py  notification_monitor.py  performance_monitor.py  pyproject.toml  register_face.py  requirements.txt  server.py  utils.py  webcam_handler.py  websocket_server.py
scripts/: start-python.js
services/: aiStatusService.ts  socketClient.ts
shared/: types.ts
types/: aiStatus.ts
(+26 files in other folders)
