[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privsight-backend"
version = "2.0.0"
description = "Python backend for PRIVSIGHT v2.0 with facial recognition, attention detection, and notification classification"
authors = [{name = "Rachit"}]
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "face-recognition>=1.3.5",
    "numpy>=1.24.0",
    "websockets>=12.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
